[gd_scene load_steps=15 format=4 uid="uid://cv2vaeuigljwt"]

[ext_resource type="Script" uid="uid://orar4yfbku55" path="res://src/ui/camera.gd" id="1_vbvyx"]
[ext_resource type="Script" uid="uid://d21vpkqujjyl2" path="res://src/ui/game/match_ui.gd" id="2_38cnk"]
[ext_resource type="Theme" uid="uid://b0yl85gha4apv" path="res://themes/main_theme.tres" id="3_38cnk"]
[ext_resource type="PackedScene" uid="uid://b8estsdk5duw1" path="res://scenes/ui/game/turn/player_turn_display.tscn" id="3_rx08d"]
[ext_resource type="Script" uid="uid://cmj15i03jv6b" path="res://src/ui/button/change_scene_button.gd" id="4_fung0"]
[ext_resource type="Shader" uid="uid://d3nwj71uk3tm" path="res://shaders/darkened_blur.gdshader" id="4_q0at2"]
[ext_resource type="PackedScene" uid="uid://duqxbwqid80mr" path="res://scenes/ui/menu/menu.tscn" id="5_4n14s"]
[ext_resource type="PackedScene" uid="uid://cvrfa8432srf0" path="res://scenes/ui/game/end_game_modal.tscn" id="5_fung0"]
[ext_resource type="TileSet" uid="uid://xd0jqo1f7ya4" path="res://assets/resources/terrain_tileset.tres" id="6_4n14s"]
[ext_resource type="Script" uid="uid://b5lfouqrpasn3" path="res://src/ui/game/board/board_ui.gd" id="7_ssde5"]
[ext_resource type="Script" uid="uid://b178hqhf1fe6f" path="res://src/game/board/board.gd" id="8_0ffn5"]
[ext_resource type="Script" uid="uid://i3exemmdxb6d" path="res://src/game/board/board_input_manager.gd" id="9_cywv7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_plr6o"]
shader = ExtResource("4_q0at2")
shader_parameter/lod = 2.5
shader_parameter/mix_percentage = 0.25
shader_parameter/color = Color(0.166556, 0.132474, 0.15523, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_toqnb"]

[node name="Core" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(16, 168)
zoom = Vector2(2, 2)
script = ExtResource("1_vbvyx")
move_by_mouse = false

[node name="MatchUi" type="Node" parent="."]
script = ExtResource("2_38cnk")

[node name="Background" type="ColorRect" parent="MatchUi"]
z_index = -128
offset_left = -5000.0
offset_top = -5000.0
offset_right = 5000.0
offset_bottom = 5000.0
color = Color(0.160784, 0.137255, 0.180392, 1)

[node name="UiCanvasLayer" type="CanvasLayer" parent="MatchUi"]
process_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="MatchUi/UiCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MatchUi/UiCanvasLayer/MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MatchUi/UiCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="FinishSlotButton" type="Button" parent="MatchUi/UiCanvasLayer/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_38cnk")
theme_override_colors/font_color = Color(0.972096, 0.961728, 0.965598, 1)
theme_override_font_sizes/font_size = 18
text = "FINISH SLOT"

[node name="BackToMenuButton" type="Button" parent="MatchUi/UiCanvasLayer/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_38cnk")
theme_override_colors/font_color = Color(0.972096, 0.961728, 0.965598, 1)
theme_override_font_sizes/font_size = 18
text = "BACK TO MENU"
script = ExtResource("4_fung0")
scene_to_change = ExtResource("5_4n14s")
metadata/_custom_type_script = "uid://cmj15i03jv6b"

[node name="BoxContainer" type="BoxContainer" parent="MatchUi/UiCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerTurnDisplay" parent="MatchUi/UiCanvasLayer/MarginContainer/VBoxContainer" instance=ExtResource("3_rx08d")]
layout_mode = 2
size_flags_vertical = 1

[node name="EndGamePanel" type="Panel" parent="MatchUi/UiCanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_plr6o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_toqnb")

[node name="EndGameModal" parent="MatchUi/UiCanvasLayer/EndGamePanel" instance=ExtResource("5_fung0")]
layout_mode = 1

[node name="BoardGridTileMap" type="TileMapLayer" parent="MatchUi"]
modulate = Color(0.23552, 0.24, 0.1728, 0.0313726)
z_index = 128
tile_map_data = PackedByteArray("AAAAAAAAAAABAA0AAAAAAAEAAAABAA0AAAAAAAIAAAABAA0AAAAAAAMAAAABAA0AAAAAAAQAAAABAA0AAAAAAAUAAAABAA0AAAAAAAYAAAABAA0AAAAAAAcAAAABAA0AAAAAAAgAAAABAA0AAAAAAAkAAAABAA0AAAAAAAoAAAABAA0AAAAAAAsAAAABAA0AAAAAAAwAAAABAA0AAAAAAA0AAAABAA0AAAAAAA4AAAABAA0AAAAAAA8AAAABAA0AAAAAABAAAAABAA0AAAAAABEAAAABAA0AAAAAABIAAAABAA0AAAAAABMAAAABAA0AAAAAABQAAAABAA0AAAABAAAAAAABAA0AAAABAAEAAAABAA0AAAABAAIAAAABAA0AAAABAAMAAAABAA0AAAABAAQAAAABAA0AAAABAAUAAAABAA0AAAABAAYAAAABAA0AAAABAAcAAAABAA0AAAABAAgAAAABAA0AAAABAAkAAAABAA0AAAABAAoAAAABAA0AAAABAAsAAAABAA0AAAABAAwAAAABAA0AAAABAA0AAAABAA0AAAABAA4AAAABAA0AAAABAA8AAAABAA0AAAABABAAAAABAA0AAAABABEAAAABAA0AAAABABIAAAABAA0AAAABABMAAAABAA0AAAABABQAAAABAA0AAAACAAAAAAABAA0AAAACAAEAAAABAA0AAAACAAIAAAABAA0AAAACAAMAAAABAA0AAAACAAQAAAABAA0AAAACAAUAAAABAA0AAAACAAYAAAABAA0AAAACAAcAAAABAA0AAAACAAgAAAABAA0AAAACAAkAAAABAA0AAAACAAoAAAABAA0AAAACAAsAAAABAA0AAAACAAwAAAABAA0AAAACAA0AAAABAA0AAAACAA4AAAABAA0AAAACAA8AAAABAA0AAAACABAAAAABAA0AAAACABEAAAABAA0AAAACABIAAAABAA0AAAACABMAAAABAA0AAAACABQAAAABAA0AAAADAAAAAAABAA0AAAADAAEAAAABAA0AAAADAAIAAAABAA0AAAADAAMAAAABAA0AAAADAAQAAAABAA0AAAADAAUAAAABAA0AAAADAAYAAAABAA0AAAADAAcAAAABAA0AAAADAAgAAAABAA0AAAADAAkAAAABAA0AAAADAAoAAAABAA0AAAADAAsAAAABAA0AAAADAAwAAAABAA0AAAADAA0AAAABAA0AAAADAA4AAAABAA0AAAADAA8AAAABAA0AAAADABAAAAABAA0AAAADABEAAAABAA0AAAADABIAAAABAA0AAAADABMAAAABAA0AAAADABQAAAABAA0AAAAEAAAAAAABAA0AAAAEAAEAAAABAA0AAAAEAAIAAAABAA0AAAAEAAMAAAABAA0AAAAEAAQAAAABAA0AAAAEAAUAAAABAA0AAAAEAAYAAAABAA0AAAAEAAcAAAABAA0AAAAEAAgAAAABAA0AAAAEAAkAAAABAA0AAAAEAAoAAAABAA0AAAAEAAsAAAABAA0AAAAEAAwAAAABAA0AAAAEAA0AAAABAA0AAAAEAA4AAAABAA0AAAAEAA8AAAABAA0AAAAEABAAAAABAA0AAAAEABEAAAABAA0AAAAEABIAAAABAA0AAAAEABMAAAABAA0AAAAEABQAAAABAA0AAAAFAAAAAAABAA0AAAAFAAEAAAABAA0AAAAFAAIAAAABAA0AAAAFAAMAAAABAA0AAAAFAAQAAAABAA0AAAAFAAUAAAABAA0AAAAFAAYAAAABAA0AAAAFAAcAAAABAA0AAAAFAAgAAAABAA0AAAAFAAkAAAABAA0AAAAFAAoAAAABAA0AAAAFAAsAAAABAA0AAAAFAAwAAAABAA0AAAAFAA0AAAABAA0AAAAFAA4AAAABAA0AAAAFAA8AAAABAA0AAAAFABAAAAABAA0AAAAFABEAAAABAA0AAAAFABIAAAABAA0AAAAFABMAAAABAA0AAAAFABQAAAABAA0AAAAGAAAAAAABAA0AAAAGAAEAAAABAA0AAAAGAAIAAAABAA0AAAAGAAMAAAABAA0AAAAGAAQAAAABAA0AAAAGAAUAAAABAA0AAAAGAAYAAAABAA0AAAAGAAcAAAABAA0AAAAGAAgAAAABAA0AAAAGAAkAAAABAA0AAAAGAAoAAAABAA0AAAAGAAsAAAABAA0AAAAGAAwAAAABAA0AAAAGAA0AAAABAA0AAAAGAA4AAAABAA0AAAAGAA8AAAABAA0AAAAGABAAAAABAA0AAAAGABEAAAABAA0AAAAGABIAAAABAA0AAAAGABMAAAABAA0AAAAGABQAAAABAA0AAAAHAAAAAAABAA0AAAAHAAEAAAABAA0AAAAHAAIAAAABAA0AAAAHAAMAAAABAA0AAAAHAAQAAAABAA0AAAAHAAUAAAABAA0AAAAHAAYAAAABAA0AAAAHAAcAAAABAA0AAAAHAAgAAAABAA0AAAAHAAkAAAABAA0AAAAHAAoAAAABAA0AAAAHAAsAAAABAA0AAAAHAAwAAAABAA0AAAAHAA0AAAABAA0AAAAHAA4AAAABAA0AAAAHAA8AAAABAA0AAAAHABAAAAABAA0AAAAHABEAAAABAA0AAAAHABIAAAABAA0AAAAHABMAAAABAA0AAAAHABQAAAABAA0AAAAIAAAAAAABAA0AAAAIAAEAAAABAA0AAAAIAAIAAAABAA0AAAAIAAMAAAABAA0AAAAIAAQAAAABAA0AAAAIAAUAAAABAA0AAAAIAAYAAAABAA0AAAAIAAcAAAABAA0AAAAIAAgAAAABAA0AAAAIAAkAAAABAA0AAAAIAAoAAAABAA0AAAAIAAsAAAABAA0AAAAIAAwAAAABAA0AAAAIAA0AAAABAA0AAAAIAA4AAAABAA0AAAAIAA8AAAABAA0AAAAIABAAAAABAA0AAAAIABEAAAABAA0AAAAIABIAAAABAA0AAAAIABMAAAABAA0AAAAIABQAAAABAA0AAAAJAAAAAAABAA0AAAAJAAEAAAABAA0AAAAJAAIAAAABAA0AAAAJAAMAAAABAA0AAAAJAAQAAAABAA0AAAAJAAUAAAABAA0AAAAJAAYAAAABAA0AAAAJAAcAAAABAA0AAAAJAAgAAAABAA0AAAAJAAkAAAABAA0AAAAJAAoAAAABAA0AAAAJAAsAAAABAA0AAAAJAAwAAAABAA0AAAAJAA0AAAABAA0AAAAJAA4AAAABAA0AAAAJAA8AAAABAA0AAAAJABAAAAABAA0AAAAJABEAAAABAA0AAAAJABIAAAABAA0AAAAJABMAAAABAA0AAAAJABQAAAABAA0AAAAKAAAAAAABAA0AAAAKAAEAAAABAA0AAAAKAAIAAAABAA0AAAAKAAMAAAABAA0AAAAKAAQAAAABAA0AAAAKAAUAAAABAA0AAAAKAAYAAAABAA0AAAAKAAcAAAABAA0AAAAKAAgAAAABAA0AAAAKAAkAAAABAA0AAAAKAAoAAAABAA0AAAAKAAsAAAABAA0AAAAKAAwAAAABAA0AAAAKAA0AAAABAA0AAAAKAA4AAAABAA0AAAAKAA8AAAABAA0AAAAKABAAAAABAA0AAAAKABEAAAABAA0AAAAKABIAAAABAA0AAAAKABMAAAABAA0AAAAKABQAAAABAA0AAAALAAAAAAABAA0AAAALAAEAAAABAA0AAAALAAIAAAABAA0AAAALAAMAAAABAA0AAAALAAQAAAABAA0AAAALAAUAAAABAA0AAAALAAYAAAABAA0AAAALAAcAAAABAA0AAAALAAgAAAABAA0AAAALAAkAAAABAA0AAAALAAoAAAABAA0AAAALAAsAAAABAA0AAAALAAwAAAABAA0AAAALAA0AAAABAA0AAAALAA4AAAABAA0AAAALAA8AAAABAA0AAAALABAAAAABAA0AAAALABEAAAABAA0AAAALABIAAAABAA0AAAALABMAAAABAA0AAAALABQAAAABAA0AAAAMAAAAAAABAA0AAAAMAAEAAAABAA0AAAAMAAIAAAABAA0AAAAMAAMAAAABAA0AAAAMAAQAAAABAA0AAAAMAAUAAAABAA0AAAAMAAYAAAABAA0AAAAMAAcAAAABAA0AAAAMAAgAAAABAA0AAAAMAAkAAAABAA0AAAAMAAoAAAABAA0AAAAMAAsAAAABAA0AAAAMAAwAAAABAA0AAAAMAA0AAAABAA0AAAAMAA4AAAABAA0AAAAMAA8AAAABAA0AAAAMABAAAAABAA0AAAAMABEAAAABAA0AAAAMABIAAAABAA0AAAAMABMAAAABAA0AAAAMABQAAAABAA0AAAANAAAAAAABAA0AAAANAAEAAAABAA0AAAANAAIAAAABAA0AAAANAAMAAAABAA0AAAANAAQAAAABAA0AAAANAAUAAAABAA0AAAANAAYAAAABAA0AAAANAAcAAAABAA0AAAANAAgAAAABAA0AAAANAAkAAAABAA0AAAANAAoAAAABAA0AAAANAAsAAAABAA0AAAANAAwAAAABAA0AAAANAA0AAAABAA0AAAANAA4AAAABAA0AAAANAA8AAAABAA0AAAANABAAAAABAA0AAAANABEAAAABAA0AAAANABIAAAABAA0AAAANABMAAAABAA0AAAANABQAAAABAA0AAAAOAAAAAAABAA0AAAAOAAEAAAABAA0AAAAOAAIAAAABAA0AAAAOAAMAAAABAA0AAAAOAAQAAAABAA0AAAAOAAUAAAABAA0AAAAOAAYAAAABAA0AAAAOAAcAAAABAA0AAAAOAAgAAAABAA0AAAAOAAkAAAABAA0AAAAOAAoAAAABAA0AAAAOAAsAAAABAA0AAAAOAAwAAAABAA0AAAAOAA0AAAABAA0AAAAOAA4AAAABAA0AAAAOAA8AAAABAA0AAAAOABAAAAABAA0AAAAOABEAAAABAA0AAAAOABIAAAABAA0AAAAOABMAAAABAA0AAAAOABQAAAABAA0AAAAPAAAAAAABAA0AAAAPAAEAAAABAA0AAAAPAAIAAAABAA0AAAAPAAMAAAABAA0AAAAPAAQAAAABAA0AAAAPAAUAAAABAA0AAAAPAAYAAAABAA0AAAAPAAcAAAABAA0AAAAPAAgAAAABAA0AAAAPAAkAAAABAA0AAAAPAAoAAAABAA0AAAAPAAsAAAABAA0AAAAPAAwAAAABAA0AAAAPAA0AAAABAA0AAAAPAA4AAAABAA0AAAAPAA8AAAABAA0AAAAPABAAAAABAA0AAAAPABEAAAABAA0AAAAPABIAAAABAA0AAAAPABMAAAABAA0AAAAPABQAAAABAA0AAAAQAAAAAAABAA0AAAAQAAEAAAABAA0AAAAQAAIAAAABAA0AAAAQAAMAAAABAA0AAAAQAAQAAAABAA0AAAAQAAUAAAABAA0AAAAQAAYAAAABAA0AAAAQAAcAAAABAA0AAAAQAAgAAAABAA0AAAAQAAkAAAABAA0AAAAQAAoAAAABAA0AAAAQAAsAAAABAA0AAAAQAAwAAAABAA0AAAAQAA0AAAABAA0AAAAQAA4AAAABAA0AAAAQAA8AAAABAA0AAAAQABAAAAABAA0AAAAQABEAAAABAA0AAAAQABIAAAABAA0AAAAQABMAAAABAA0AAAAQABQAAAABAA0AAAARAAAAAAABAA0AAAARAAEAAAABAA0AAAARAAIAAAABAA0AAAARAAMAAAABAA0AAAARAAQAAAABAA0AAAARAAUAAAABAA0AAAARAAYAAAABAA0AAAARAAcAAAABAA0AAAARAAgAAAABAA0AAAARAAkAAAABAA0AAAARAAoAAAABAA0AAAARAAsAAAABAA0AAAARAAwAAAABAA0AAAARAA0AAAABAA0AAAARAA4AAAABAA0AAAARAA8AAAABAA0AAAARABAAAAABAA0AAAARABEAAAABAA0AAAARABIAAAABAA0AAAARABMAAAABAA0AAAARABQAAAABAA0AAAASAAAAAAABAA0AAAASAAEAAAABAA0AAAASAAIAAAABAA0AAAASAAMAAAABAA0AAAASAAQAAAABAA0AAAASAAUAAAABAA0AAAASAAYAAAABAA0AAAASAAcAAAABAA0AAAASAAgAAAABAA0AAAASAAkAAAABAA0AAAASAAoAAAABAA0AAAASAAsAAAABAA0AAAASAAwAAAABAA0AAAASAA0AAAABAA0AAAASAA4AAAABAA0AAAASAA8AAAABAA0AAAASABAAAAABAA0AAAASABEAAAABAA0AAAASABIAAAABAA0AAAASABMAAAABAA0AAAASABQAAAABAA0AAAATAAAAAAABAA0AAAATAAEAAAABAA0AAAATAAIAAAABAA0AAAATAAMAAAABAA0AAAATAAQAAAABAA0AAAATAAUAAAABAA0AAAATAAYAAAABAA0AAAATAAcAAAABAA0AAAATAAgAAAABAA0AAAATAAkAAAABAA0AAAATAAoAAAABAA0AAAATAAsAAAABAA0AAAATAAwAAAABAA0AAAATAA0AAAABAA0AAAATAA4AAAABAA0AAAATAA8AAAABAA0AAAATABAAAAABAA0AAAATABEAAAABAA0AAAATABIAAAABAA0AAAATABMAAAABAA0AAAATABQAAAABAA0AAAAUAAAAAAABAA0AAAAUAAEAAAABAA0AAAAUAAIAAAABAA0AAAAUAAMAAAABAA0AAAAUAAQAAAABAA0AAAAUAAUAAAABAA0AAAAUAAYAAAABAA0AAAAUAAcAAAABAA0AAAAUAAgAAAABAA0AAAAUAAkAAAABAA0AAAAUAAoAAAABAA0AAAAUAAsAAAABAA0AAAAUAAwAAAABAA0AAAAUAA0AAAABAA0AAAAUAA4AAAABAA0AAAAUAA8AAAABAA0AAAAUABAAAAABAA0AAAAUABEAAAABAA0AAAAUABIAAAABAA0AAAAUABMAAAABAA0AAAAUABQAAAABAA0AAAA=")
tile_set = ExtResource("6_4n14s")

[node name="BoardUi" type="Node2D" parent="MatchUi"]
script = ExtResource("7_ssde5")
metadata/_custom_type_script = "uid://b5lfouqrpasn3"

[node name="Board" type="Node2D" parent="."]
script = ExtResource("8_0ffn5")

[node name="BoardInputManager" type="Node" parent="Board"]
script = ExtResource("9_cywv7")
metadata/_custom_type_script = "uid://i3exemmdxb6d"

[node name="Units" type="Node2D" parent="Board"]
